--- a/index.html
+++ b/index.html
@@ -5,10 +5,185 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Facility Flow Booking</title>
 </head>
-<body>
-  <!-- React will render here -->
+  <body>
+    <!-- Decorative floating elements -->
+    <svg class="bg-bubble" style="top: 8vh; left: 6vw; width: 90px; height: 90px;" viewBox="0 0 90 90" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="45" cy="45" r="45" fill="#4f8cff" fill-opacity="0.18"/>
+    </svg>
+    <svg class="bg-bubble" style="top: 70vh; left: 80vw; width: 120px; height: 120px;" viewBox="0 0 120 120" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="60" cy="60" r="60" fill="#a259c6" fill-opacity="0.15"/>
+    </svg>
+    <svg class="bg-bubble" style="top: 40vh; left: 50vw; width: 60px; height: 60px;" viewBox="0 0 60 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="30" cy="30" r="30" fill="#38b6ff" fill-opacity="0.13"/>
+    </svg>
+    <svg class="bg-icon" style="top: 18vh; left: 80vw; width: 48px; height: 48px;" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <rect x="8" y="12" width="32" height="24" rx="4" fill="#fff" fill-opacity="0.7"/>
+      <rect x="12" y="16" width="24" height="16" rx="2" fill="#4f8cff" fill-opacity="0.18"/>
+      <rect x="16" y="20" width="16" height="8" rx="1" fill="#a259c6" fill-opacity="0.18"/>
+    </svg>
+    <svg class="bg-icon" style="top: 80vh; left: 10vw; width: 40px; height: 40px;" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="20" cy="20" r="20" fill="#fff" fill-opacity="0.7"/>
+      <rect x="10" y="14" width="20" height="12" rx="3" fill="#38b6ff" fill-opacity="0.18"/>
+      <rect x="14" y="18" width="12" height="4" rx="1" fill="#a259c6" fill-opacity="0.18"/>
+    </svg>
+  <style>
+    .bg-bubble, .bg-icon {
+      position: fixed;
+      z-index: 0;
+      pointer-events: none;
+      animation: float-bubble 8s ease-in-out infinite alternate;
+    }
+    .bg-bubble:nth-child(2) { animation-delay: 0s; }
+    .bg-bubble:nth-child(3) { animation-delay: 2s; }
+    .bg-bubble:nth-child(4) { animation-delay: 4s; }
+    .bg-icon:nth-child(5) { animation-delay: 1s; }
+    .bg-icon:nth-child(6) { animation-delay: 3s; }
+    @keyframes float-bubble {
+      0% { transform: translateY(0) scale(1); }
+      100% { transform: translateY(-18px) scale(1.08); }
+    }
+    body {
+      margin: 0;
+      padding: 0;
+      min-height: 100vh;
+      font-family: 'Segoe UI', 'Roboto', Arial, sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      /* More visible SVG background */
+      background-color: #e0e7ef;
+      background-image: url('data:image/svg+xml;utf8,<svg width="100%25" height="100%25" xmlns="http://www.w3.org/2000/svg"><defs><radialGradient id="g1" cx="30%" cy="20%" r="60%" fx="30%" fy="20%"><stop offset="0%25" stop-color="%234f8cff" stop-opacity="0.35"/><stop offset="100%25" stop-color="%23fff" stop-opacity="0"/></radialGradient><radialGradient id="g2" cx="80%" cy="80%" r="70%" fx="80%" fy="80%"><stop offset="0%25" stop-color="%23a259c6" stop-opacity="0.28"/><stop offset="100%25" stop-color="%23fff" stop-opacity="0"/></radialGradient><radialGradient id="g3" cx="60%" cy="50%" r="40%" fx="60%" fy="50%"><stop offset="0%25" stop-color="%2338b6ff" stop-opacity="0.22"/><stop offset="100%25" stop-color="%23fff" stop-opacity="0"/></radialGradient></defs><circle cx="340" cy="160" r="320" fill="url(%23g1)"/><circle cx="1200" cy="700" r="400" fill="url(%23g2)"/><circle cx="800" cy="400" r="250" fill="url(%23g3)"/></svg>');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+    }
+    .main-header {
+      margin-top: 48px;
+      margin-bottom: 24px;
+      text-align: center;
+      background: linear-gradient(90deg, #4f8cff 0%, #38b6ff 100%);
+      border-radius: 18px;
+      box-shadow: 0 4px 24px rgba(44, 62, 80, 0.10);
+      padding: 32px 32px 24px 32px;
+      max-width: 520px;
+      width: 90vw;
+    }
+    .main-header h1 {
+      font-size: 2.7rem;
+      color: #fff;
+      margin-bottom: 10px;
+      letter-spacing: 1.5px;
+      font-weight: 700;
+      text-shadow: 0 2px 8px rgba(44, 62, 80, 0.10);
+    }
+    .main-header h2 {
+      font-size: 1.35rem;
+      color: #e0e7ef;
+      font-weight: 400;
+      margin-bottom: 0;
+    }
+    .main-header p {
+      color: #eaf6ff;
+      font-size: 1.08rem;
+      margin-top: 14px;
+      margin-bottom: 0;
+    }
+    @media (max-width: 600px) {
+      .main-header {
+        padding: 18px 6px 12px 6px;
+      }
+      .main-header h1 {
+        font-size: 2rem;
+      }
+      .main-header h2 {
+        font-size: 1.05rem;
+      }
+    }
+    .features-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 36px;
+  margin-top: 32px;
+  margin-bottom: 18px;
+  width: 100vw;
+  max-width: 1100px;
+  flex-wrap: wrap;
+}
+.features-visuals {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 18px;
+}
+.feature-img {
+  width: 110px;
+  height: 110px;
+  object-fit: contain;
+  filter: drop-shadow(0 4px 16px rgba(44,62,80,0.13));
+  border-radius: 18px;
+  background: #fff;
+  padding: 8px;
+  transition: transform 0.2s;
+}
+.feature-img:hover {
+  transform: scale(1.08) rotate(-3deg);
+  box-shadow: 0 8px 32px rgba(44,62,80,0.18);
+}
+.features-list {
+  max-width: 520px;
+}
+.features-list h2 {
+  color: #2d3a4b;
+  font-size: 2rem;
+  margin-bottom: 12px;
+  text-align: left;
+}
+.features-list ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.features-list li {
+  margin-bottom: 18px;
+  font-size: 1.13rem;
+  color: #2d3a4b;
+  background: #f8fafc;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(44,62,80,0.06);
+  padding: 14px 18px 10px 18px;
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+.feature-desc {
+  color: #4f8cff;
+  font-size: 0.98rem;
+  margin-top: 2px;
+}
+@media (max-width: 900px) {
+  .features-section {
+    flex-direction: column;
+    gap: 18px;
+    align-items: stretch;
+  }
+  .features-visuals {
+    flex-direction: row;
+    justify-content: center;
+    gap: 18px;
+  }
+  .features-list h2 {
+    text-align: center;
+  }
+}
+  </style>
+  <header class="main-header">
+  <h1>Facility Flow Booking</h1>
+  <h2>Book your facility slot with ease</h2>
+  </header>
   <div id="root"></div>
-
   <!-- Optional: you can include favicon or other meta tags here -->
 </body>
 </html>
